# bodyjim

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  release.sh
.github/workflows/: release.yaml  tests.yaml
bodyjim/: __init__.py  data_stream.py  env.py  schema.py  wrappers.py
examples/: follow_human.py  random_walk.py  roam.py  wasd.py
scripts/: bump_tag.sh
src/bodyjim/: data_stream.py  env.py
tests/: test_env.py  test_space.py
