[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bodyjim"
version = "1.0.1"
authors = [{ name="Vehicle Researcher", email="user@comma.ai" }]
description = "Comma body gymnasium API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "teleoprtc>=1.0.1",
  "aiortc>=1.6.0",
  "aiohttp>=3.7.0",
  "gymnasium>=0.29.0",
  "numpy>=1.19.0",
  "pygame",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
]
examples = [
  "opencv-python",
  "onnx",
  "onnxruntime",
]

[project.urls]
"Homepage" = "https://github.com/commaai/body-jim"
"Bug Tracker" = "https://github.com/commaai/body-jim/issues"